# ECE1747-Multi-GPU-Gradient-Descent

./: CMakeLists.txt  README.md  gpu.cu  gpuhelper.cu  local.cpp  mpi.cpp  mpigpu.cpp  read.cpp  read.h
gpu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gpu  gpu.cu
local/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  local  local.cpp
mpi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mpi  mpi.cpp
mpigpu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gpuhelper.cuh  mpigpu  mpigpu.cpp
